--- a/blog.html
+++ b/blog.html
@@ -25,39 +25,37 @@
 </head>
 <body>
 <!--MENU Y LOGO-->
-<div class="header">
+<div class="header3">
     <div class="container">
  	    <div class="row">
             <div class="col-md-6">
-                <h3>FREELANCER</h3>
+                 <h3><a href="index.html">FREELANCER</a></h3>
             </div>
  	        <div class="col-md-6">
  		         <div class="main-menu">  
  			        <ul class="list-nav">
                         <li><a href="#portafolio2">PORTAFOLIO</a></li>
-                        <li><a href="about.html">ABOUT</a></li>
-                        <li><a href="blog.html">BLOG</a></li>
-                        <li><a href="#contact2">CONTACT</a></li>
+                        <li><a href="#contact3">CONTACT</a></li>
           	        </ul>
  		        </div>
             </div>
  	    </div>
      </div>
 </div>
-<!--SUPER STAR-->
-<div class="fondo1">  
+<!--OUR THOUGHTS-->
+<div id="our">  
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h1>OUR THOUGHTS</h1>
-                <hr><span><i class="fa fa-star-o"></i></span><hr>
+                <hr><span><i id="icono1" class="fa fa-star"></i></span><hr>
                 <p>news, integrations and the answer to life, the universe and everything else</p>
             </div>
         </div>
     </div>
 </div>
 <!--IMG Y TEXTO-->
-<div id="portafolio2" class="fondo5">
+<div id="portafolio2">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -71,7 +69,17 @@
             </div>
             <div class="col-md-8">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit vel dolorem ex exercitationem nisi illo tempora, laborum, id                     unde doloribus inventore repudiandae tenetur. Pariatur, sequi, quibusdam rerum ducimus nam at?.<br>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aperiam, officiis distinctio? Aperiam vitae facilis maxime                     placeat amet aspernatur non maiores, illo labore earum sit mollitia ipsum sapiente quidem rerum.</p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aperiam, officiis distinctio? Aperiam vitae facilis maxime                     placeat amet aspernatur non maiores, illo labore earum sit mollitia ipsum sapiente quidem rerum.
+                  <br>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit vel dolorem ex exercitationem nisi illo tempora, laborum, id                       unde doloribus inventore repudiandae tenetur. Pariatur, sequi, quibusdam rerum ducimus nam at?.<br>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aperiam, officiis distinctio? Aperiam vitae facilis maxime                     placeat amet aspernatur non maiores, illo labore earum sit mollitia ipsum sapiente quidem rerum.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h2>LET'S CODE IN JAVASCRIP'S ES6. NO<br>
+                TRANSPILER. LET'S CODE IN THE FUTURE NOW</h2>
             </div>
         </div>
         <div class="row">
@@ -84,12 +92,24 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-md-12">
+                <h2>LET'S CODE IN JAVASCRIP'S ES6. NO<br>
+                TRANSPILER. LET'S CODE IN THE FUTURE NOW</h2>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-4">
                 <img src="img/portfolio/circus.png">
             </div>
             <div class="col-md-8">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit vel dolorem ex exercitationem nisi illo tempora, laborum, id                      unde doloribus inventore repudiandae tenetur. Pariatur, sequi, quibusdam rerum ducimus nam at?.<br>
                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aperiam, officiis distinctio? Aperiam vitae facilis maxime                    placeat amet aspernatur non maiores, illo labore earum sit mollitia ipsum sapiente quidem rerum.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h2>LET'S CODE IN JAVASCRIP'S ES6. NO<br>
+                TRANSPILER. LET'S CODE IN THE FUTURE NOW</h2>
             </div>
         </div>
         <div class="row">
@@ -102,12 +122,24 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-md-12">
+                <h2>LET'S CODE IN JAVASCRIP'S ES6. NO<br>
+                TRANSPILER. LET'S CODE IN THE FUTURE NOW</h2>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-4">
                 <img src="img/portfolio/safe.png">
             </div>
             <div class="col-md-8">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit vel dolorem ex exercitationem nisi illo tempora, laborum, id                      unde doloribus inventore repudiandae tenetur. Pariatur, sequi, quibusdam rerum ducimus nam at?.<br>
                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aperiam, officiis distinctio? Aperiam vitae facilis maxime                    placeat amet aspernatur non maiores, illo labore earum sit mollitia ipsum sapiente quidem rerum.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h2>LET'S CODE IN JAVASCRIP'S ES6. NO<br>
+                TRANSPILER. LET'S CODE IN THE FUTURE NOW</h2>
             </div>
         </div>
         <div class="row">
@@ -135,25 +167,27 @@
     </div>
 </div>
 <!--CONTACT ME-->
-<div id="contact2" class="fondo4">
+ <div id="contact3">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <h2>CONTACT ME</h2>
-                <hr><span><i class="fa fa-star-o"></i></span><hr>
-                <input type="text" class="form-control" placeholder="Name">
-                <input type="text" class="form-control" placeholder="Email Address">
-                <input type="text" class="form-control" placeholder="Phone Number">
-                <input type="text" class="form-control" placeholder="Message">
-                <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default">Send</button>
+                <div class="col-md-12">
+                    <h3>CONTACT ME</h3>
+                    <hr><span><i id="icono1" class="fa fa-star"></i></span><hr>
+                </div>
+                <div class="col-md-6 col-md-offset-3">
+                    <input type="text" class="form-control" placeholder="Name">
+                    <input type="text" class="form-control" placeholder="Email Address">
+                    <input type="text" class="form-control" placeholder="Phone Number">
+                    <input type="text" class="form-control" id="mensaje" placeholder="Message">
+                    <br>
+                    <button type="button" class="boton2">Send</button>
                 </div>
             </div>
         </div>
      </div>
 </div>
   <!--FOOTER 1-->
- <div class="footer">
+ <div id="footer1">
      <div class="container">
          <div class="row">
              <div class="col-md-4">
@@ -163,11 +197,11 @@
              </div>
              <div class="col-md-4">
                  <h4>AROUND THE WEB</h4>
-                 <i class="fa fa-facebook"></i>
-                 <i class="fa fa-google-plus"></i>
-                 <i class="fa fa-twitter"></i>
-                 <i class="fa fa-linkedin"></i>
-                 <i class="fa fa-dribbble"></i>
+                 <div class="circulo"><i class="fa fa-facebook"></i></div>
+                 <div class="circulo"><i class="fa fa-google-plus"></i></div>
+                 <div class="circulo"><i class="fa fa-twitter"></i></div>
+                 <div class="circulo"><i class="fa fa-linkedin"></i></div>
+                 <div class="circulo"><i class="fa fa-dribbble"></i></div>
              </div>
              <div class="col-md-4">
                  <h4>ABOUT FREELANCER</h4>
@@ -177,10 +211,12 @@
      </div>
  </div>
  <!--FOOTER 2-->
- <div class="footer2">
-     <div class="row">
-         <div class="col-md-12">
-             <h6>Copyright Your <i class="fa fa-copyright"></i> Website 2014</h6>
+ <div id="footer2">
+    <div class="container">
+         <div class="row">
+             <div class="col-md-12">
+                 <h6>Copyright Your <i class="fa fa-copyright"></i> Website 2014</h6>
+             </div>
          </div>
      </div>
  </div>
