--- a/about.html
+++ b/about.html
@@ -24,66 +24,95 @@
 
 </head>
 <body>
+<!--MENU Y LOGO -->
+<div class="header2">
+    <div class="container">
+ 	    <div class="row">
+            <div class="col-md-6">
+                <h3><a href="index.html">FREELANCER</a></h3>
+            </div>
+ 	        <div class="col-md-6">
+ 		         <div class="main-menu">  
+ 			        <ul>
+                        <li><a href="#im">I'M AWESOME</a></li>
+                        <li><a href="#im">I'M INNOVATIVE</a></li>
+                        <li><a href="#im">I'M EVOLVING</a></li>
+                        <li><a href="#contact2">CONTACT</a></li>
+          	        </ul>
+ 		         </div>
+            </div>
+ 	    </div>
+     </div>
+</div>
 <!--ABOUT ME-->
-<div class="fondo01">  
+<div id="about2">  
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <img src="img/profile.png">
                 <h1>ABOUT ME</h1>
-                <hr><span><i class="fa fa-star-o"></i></span><hr>
+                <hr><span><i id="icono1" class="fa fa-star"></i></span><hr>
                 <p>Web Developer - Graphic Artist - User Experience Designer</p>
             </div>
         </div>
     </div>
 </div>
 <!--SECCION2-->
-<div class="fondo3">
+<div id="im">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-5 col-md-offset-1">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos facere quisquam possimus debitis enim, sunt, sit magnam, alias                    ut esse fugit beatae eum similique officiis consequuntur quaerat non laboriosam consectetur?</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore reiciendis quasi nisi, nemo laboriosam. Necessitatibus quidem                    architecto deserunt modi possimus minus ipsum ratione. Expedita facere repudiandae facilis dolorum qui similique.</p>
             </div>
         </div>
+        <br>
         <div class="row">
               <div class="col-md-4">
                   <h3>I'M AWESOME</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!Lorem ipsum dolor sit amet,                            consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi ipsa, nisi dolorum, facere                      eligendi minima sit recusandae vero excepturi, architecto quam!
+                  </p>
               </div>
               <div class="col-md-4">
-                  <h3>I'N INNOVATIVE</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!</p>
+                  <h3>I'M INNOVATIVE</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!Lorem ipsum dolor sit amet,                            consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi ipsa, nisi dolorum, facere                      eligendi minima sit recusandae vero excepturi, architecto quam!
+                     eligendi minima sit recusandae vero excepturi, architecto quam!
+                  </p>
               </div>
               <div class="col-md-4">
-                  <h3>I'N EVOLVING</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!</p>
+                  <h3>I'M EVOLVING</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!Lorem ipsum dolor sit amet,                            consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi ipsa, nisi dolorum, facere                      eligendi minima sit recusandae vero excepturi, architecto quam!
+                     eligendi minima sit recusandae vero excepturi, architecto quam!
+                     eligendi minima sit recusandae vero excepturi, architecto quam!
+                  </p>
               </div> 
         </div>
     </div>
 </div>
  <!--CONTACT ME-->
-<div class="fondo4">
+ <div id="contact2">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <h2>CONTACT ME</h2>
-                <hr><span><i class="fa fa-star-o"></i></span><hr>
-                <input type="text" class="form-control" placeholder="Name">
-                <input type="text" class="form-control" placeholder="Email Address">
-                <input type="text" class="form-control" placeholder="Phone Number">
-                <input type="text" class="form-control" placeholder="Message">
-                <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default">Send</button>
+                <div class="col-md-12">
+                    <h3>CONTACT ME</h3>
+                    <hr><span><i id="icono1" class="fa fa-star"></i></span><hr>
+                </div>
+                <div class="col-md-6 col-md-offset-3">
+                    <input type="text" class="form-control" placeholder="Name">
+                    <input type="text" class="form-control" placeholder="Email Address">
+                    <input type="text" class="form-control" placeholder="Phone Number">
+                    <input type="text" class="form-control" id="mensaje" placeholder="Message">
+                    <br>
+                    <button type="button" class="boton2">Send</button>
                 </div>
             </div>
         </div>
      </div>
-</div>  
+</div>
    <!--FOOTER 1-->
- <div class="footer">
+ <div id="footer1">
      <div class="container">
          <div class="row">
              <div class="col-md-4">
@@ -93,11 +122,11 @@
              </div>
              <div class="col-md-4">
                  <h4>AROUND THE WEB</h4>
-                 <i class="fa fa-facebook"></i>
-                 <i class="fa fa-google-plus"></i>
-                 <i class="fa fa-twitter"></i>
-                 <i class="fa fa-linkedin"></i>
-                 <i class="fa fa-dribbble"></i>
+                 <div class="circulo"><i class="fa fa-facebook"></i></div>
+                 <div class="circulo"><i class="fa fa-google-plus"></i></div>
+                 <div class="circulo"><i class="fa fa-twitter"></i></div>
+                 <div class="circulo"><i class="fa fa-linkedin"></i></div>
+                 <div class="circulo"><i class="fa fa-dribbble"></i></div>
              </div>
              <div class="col-md-4">
                  <h4>ABOUT FREELANCER</h4>
@@ -107,15 +136,17 @@
      </div>
  </div>
  <!--FOOTER 2-->
- <div class="footer2">
-     <div class="row">
-         <div class="col-md-12">
-             <h6>Copyright Your <i class="fa fa-copyright"></i> Website 2014</h6>
+ <div id="footer2">
+    <div class="container">
+         <div class="row">
+             <div class="col-md-12">
+                 <h6>Copyright Your <i class="fa fa-copyright"></i> Website 2014</h6>
+             </div>
          </div>
      </div>
  </div>
 
- <!-- Jquery -->
+ <!-- JS-->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/freelancer.js"></script>
